--- a/static/reseller/css/reseller-layout.css
+++ b/static/reseller/css/reseller-layout.css
@@ -215,6 +215,9 @@
 
 .page-content {
     padding: 1.5rem;
+    max-width: 1200px;
+    margin: 0 auto;
+    width: 100%;
 }
 
 /* Page header inside main content */
