--- a/templates/landing/landing.html
+++ b/templates/landing/landing.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="{% static 'css/landing.css' %}">
+    <link rel="stylesheet" href="{% static 'css/landing.css' %}?v=d68669ef">
+    <link rel="stylesheet" href="{% static 'css/mobile.css' %}?v=1">
   </head>
   <body>
     <header class="nav">
